name:                data-bundle
version:             0.1.0.0
synopsis:            Bundle data files inside executables, for easy access and single file distribution.
-- description:         
homepage:            https://github.com/valderman/data-bundle
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable bundletool
  main-is:
    bundletool.hs
  build-depends:
    base            >=4.8    && <5,
    cereal          >=0.4    && <0.5,
    bytestring      >=0.10   && <0.11,
    hashable        >=1.2    && <1.3,
    containers      >=0.5    && <0.6,
    utf8-string     >=1.0    && <1.1,
    executable-path >=0.0.3  && <0.0.4
  default-language:
    Haskell2010

library
  exposed-modules:
    Data.Bundle,
    Data.Bundle.File
  other-modules:
    Data.Bundle.Header
  other-extensions:
    RecordWildCards,
    BangPatterns
  build-depends:
    base            >=4.8    && <5,
    cereal          >=0.4    && <0.5,
    bytestring      >=0.10   && <0.11,
    hashable        >=1.2    && <1.3,
    containers      >=0.5    && <0.6,
    utf8-string     >=1.0    && <1.1,
    executable-path >=0.0.3  && <0.0.4
  default-language:
    Haskell2010
